[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UnitCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UnitCardView.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerHand.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/TheaterLane.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color( 0.392157, 0.384314, 0.384314, 1 )
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 822.0
margin_bottom = 713.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 77.0
margin_top = 65.0
margin_right = 1203.0
margin_bottom = 654.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLog" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 589.0
rect_min_size = Vector2( 240, 60 )
rect_pivot_offset = Vector2( -571.828, -65 )
theme = SubResource( 1 )
custom_constants/separation = 32

[node name="NewGameButton" type="Button" parent="CenterContainer/HBoxContainer/TextLog"]
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 0
text = "New Game"

[node name="Label" type="RichTextLabel" parent="CenterContainer/HBoxContainer/TextLog"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 589.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
text = "Log:
Line 1
Line 2
Line 3
Line 4
Line 5"

[node name="Board" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
self_modulate = Color( 0.768627, 0.698039, 0.698039, 1 )
margin_left = 304.0
margin_right = 829.0
margin_bottom = 589.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentHand" parent="CenterContainer/HBoxContainer/Board" instance=ExtResource( 5 )]
visible = false
player_nr = 2
score = 0

[node name="BoardRow" type="HBoxContainer" parent="CenterContainer/HBoxContainer/Board"]
margin_right = 525.0
margin_bottom = 436.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="TheaterLane1" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 35.0
margin_right = 144.0
margin_bottom = 436.0
theater_type = 1

[node name="TheaterLane2" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 160.0
margin_right = 269.0
margin_bottom = 436.0
theater_type = 2

[node name="TheaterLane3" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 285.0
margin_right = 394.0
margin_bottom = 436.0
theater_type = 3

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/Board/BoardRow"]
margin_left = 410.0
margin_right = 489.0
margin_bottom = 436.0
rect_min_size = Vector2( 79, 0 )

[node name="UnitCard" parent="CenterContainer/HBoxContainer/Board/BoardRow/CenterContainer" instance=ExtResource( 3 )]
margin_top = 163.0
margin_right = 79.0
margin_bottom = 272.0

[node name="PlayerHand" parent="CenterContainer/HBoxContainer/Board" instance=ExtResource( 5 )]
margin_top = 452.0
margin_bottom = 589.0
player_nr = 1
score = 0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 893.0
margin_right = 1126.0
margin_bottom = 589.0

[node name="SideBar" type="VBoxContainer" parent="CenterContainer/HBoxContainer/CenterContainer"]
margin_right = 233.0
margin_bottom = 589.0
custom_constants/separation = 16

[node name="WithdrawButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_right = 233.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 0
text = "Withdraw"

[node name="Spacer" type="Control" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 56.0
margin_right = 233.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 8 )

[node name="UnitCardView" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar" instance=ExtResource( 4 )]
margin_top = 80.0
margin_right = 233.0
margin_bottom = 399.0

[node name="Spacer2" type="Control" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 415.0
margin_right = 233.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 8 )

[node name="Prompt" type="Label" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 439.0
margin_right = 233.0
margin_bottom = 453.0
text = "Select a card from your hand to play."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 469.0
margin_right = 233.0
margin_bottom = 477.0
rect_min_size = Vector2( 0, 8 )

[node name="PlayFaceupButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 493.0
margin_right = 233.0
margin_bottom = 533.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 0
disabled = true
text = "Play Faceup"

[node name="PlayFacedownButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 549.0
margin_right = 233.0
margin_bottom = 589.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 0
disabled = true
text = "Play Facedown"
[connection signal="card_focussed" from="." to="CenterContainer/HBoxContainer/CenterContainer/SideBar/UnitCardView" method="_on_Game_card_focussed"]
[connection signal="card_selected" from="." to="CenterContainer/HBoxContainer/CenterContainer/SideBar/UnitCardView" method="_on_Game_card_selected"]
[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/TextLog/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/WithdrawButton" to="." method="_on_WithdrawButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/PlayFaceupButton" to="." method="_on_PlayFaceupButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/PlayFacedownButton" to="." method="_on_PlayFacedownButton_pressed"]
